# oxidized-alpaca

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  schema-watch.yml
common_alpaca/: Cargo.toml
common_alpaca/src/: env.rs  error.rs  lib.rs
examples/: account_info.rs  daily_bars.rs  stock_streaming.rs  streaming.rs  tracing.rs
restful_alpaca/: Cargo.toml
restful_alpaca/examples/: tracing.rs
src/: account_type.rs  alpaca_env.rs  alpaca_rest_client.rs  asset.rs  crypto.rs  env.rs  error.rs  feed.rs  ids.rs  lib.rs  orders.rs  rest_client.rs  serde_helpers.rs  streaming_client.rs  utils.rs
src/common/: mod.rs  rest_client.rs
src/market_data/: bars.rs  mod.rs
src/market_data/stock_pricing/: mod.rs
src/market_data/stock_pricing/historical/: bars.rs  mod.rs
src/market_data/stock_pricing/streaming/: mod.rs
src/restful/: market_data_client.rs  mod.rs  rest_client.rs  trading_client.rs
src/restful/market_data/: corporate_actions.rs  fixed_income.rs  forex.rs  logos.rs  mod.rs  news.rs  pagination.rs  screener.rs  time_frame.rs
src/restful/market_data/crypto/: bars.rs  mod.rs  orderbooks.rs  quotes.rs  snapshots.rs  trades.rs
src/restful/market_data/options/: bars.rs  mod.rs  quotes.rs  snapshots.rs  trades.rs
src/restful/market_data/stock/: auctions.rs  bars.rs  meta.rs  mod.rs  pagination.rs  quotes.rs  snapshots.rs  trades.rs
src/restful/market_data/stock_pricing/historical/: mod.rs
src/restful/trading/: account_activities.rs  account_configurations.rs  accounts.rs  assets.rs  calendar.rs  clock.rs  mod.rs  options_contracts.rs  orders.rs  portfolio_history.rs  positions.rs  watchlists.rs
src/streaming/: client.rs  client_state.rs  crypto_client.rs  mod.rs  news_client.rs  option_client.rs  stock_client.rs  streaming_client.rs  trading_updates_client.rs  wire.rs
src/streaming/messages/: crypto.rs  mod.rs  news.rs  option.rs  stock.rs  stock_data.rs  trade_update.rs
src/trader_api/: mod.rs  models.rs
src/utilities/: mod.rs  rest_client.rs  streaming_client.rs  vexpand.rs
streaming_alpaca/: Cargo.toml
streaming_alpaca/src/: client_state.rs  error.rs  lib.rs  main.rs  streaming_client.rs
streaming_alpaca/src/messages/: stock_data.rs
tests/: README.md  account_tests.rs  assets_tests.rs  market_data_endpoint_coverage.rs  trading_endpoint_coverage.rs  trading_sequence.rs  unimplemented_endpoint_canary.rs
