[package]
name = "oxidized_alpaca"
version = "0.1.0"
edition = "2021"

[features]
default = ["restful", "streaming"]
restful = ["dep:reqwest"]
streaming = ["dep:socketeer"]

[dependencies]
socketeer = { version = "0.0.3", features = ["tracing"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
serial_test = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
