[package]
name = "oxidized_alpaca"
version = "0.0.10"
edition = "2024"
description = "Rust client for Alpaca's trading and data APIs"
authors = ["Zach Heylmun <zheylmun@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zheylmun/oxidized-alpaca"

[features]
default = ["restful", "streaming", "tracing"]
restful = ["dep:reqwest"]
streaming = ["dep:socketeer"]
tracing = ["dep:tracing"]

[dependencies]
socketeer = { version = "0.5", features = ["msgpack", "tracing"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query"], optional = true }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
tracing = { version = "0.1", optional = true }
url = "2"
serde_path_to_error = "0.1.16"

[dev-dependencies]
serial_test = "3"
socketeer = { version = "0.5", features = ["mocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = "0.3"
serde_urlencoded = "0.7"
rmp-serde = "1"
