[package]
name = "streaming_alpaca"
version = "0.1.0"
edition = "2021"

[dependencies]
socketeer = { path = "../../socketeer" }

chrono = { version = "0.4.39", features = ["serde"] }
common_alpaca = { path = "../common_alpaca" }
futures = "0.3.30"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"


[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros"] }
